--- a/miraire/css/module/_variable.scss
+++ b/miraire/css/module/_variable.scss
@@ -3,12 +3,14 @@
 // color
 $Black:#222222;
 $gray:#bbbbbb;
-$letterWhite:#ffffff;
-$bgWhite:#fefefe;
+$White:#ffffff;
 
-$btnBgColor:#2a72a9;
-$btnBorderColor:#9b9b9b;
-$btnShadowColor:#54676743;
+$Color1:#f5a83b;
+// $Color2:
+$Color3:#003a43;
+
+$bgColorWhite:#f5f5f5;
+$bgColorGray:#ede9e6;
 
 $tableBgColor:#ffffff;
 $tableBorderColor:#333333;
