--- a/miraire/css/module/_variable.scss
+++ b/miraire/css/module/_variable.scss
@@ -17,8 +17,8 @@ $tableBorderColor:#333333;
 
 
 // font
-// font-family:フォント名
-
+// VDL ロゴJrブラック
+$font-family-vdl-logojrblack: "vdl-logojrblack", sans-serif;
 
 
 // typography
