--- a/miraire/css/style.scss
+++ b/miraire/css/style.scss
@@ -1,8 +1,15 @@
 @charset "utf-8";
-// サイト全体に共通するスタイルの読み込み
 
 // scssファイルの読み込み
 @use "module/_setting.scss";
 @use "module/_header.scss";
 @use "module/_hamburger.scss";
 @use "module/_footer.scss";
+
+// サイト全体に共通するスタイルの読み込み
+html{
+    font-family: "hiragino-kaku-gothic-pron", sans-serif;
+    font-size: 14px;
+    line-height: 1.6;
+    letter-spacing: 0.03em;
+}
