--- a/miraire/css/module/_variable.scss
+++ b/miraire/css/module/_variable.scss
@@ -17,9 +17,7 @@ $tableBorderColor:#333333;
 
 
 // font
-// VDL ロゴJrブラック
-$font-family-vdl-logojrblack: "vdl-logojrblack", sans-serif;
-
+// font-family: フォント名;
 
 // typography
 // body{
