--- a/miraire/css/module/_header.scss
+++ b/miraire/css/module/_header.scss
@@ -1,1 +1,50 @@
 @use "_variable.scss" as *;
+
+// headerの文字設定
+header{
+    li{
+        text-align: center;
+        font-size: 1.5rem;
+        font-weight: bold;
+        line-height: 1;
+        font-family: "vdl-logojrblack", sans-serif;
+        color: $Black;
+        span{
+            font-size: 0.4rem;
+            font-family: "hiragino-kaku-gothic-pron", sans-serif;
+        }
+    }
+}
+
+// headerのスタイル設定
+header{
+    padding: 0 3%;
+    width: 100vw;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    img.logo{
+        width: 200px;
+    }
+    nav{
+        ul{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 1.5em;
+            span{
+                display: block;
+            }
+        }
+    }
+    img.vote{
+        width: 120px;
+        position: relative;
+        top: 1rem;
+    }
+}
+// *{
+//     border: 1px solid red;
+// }
