--- a/miraire/css/module/_header.scss
+++ b/miraire/css/module/_header.scss
@@ -18,6 +18,7 @@ header{
 
 // headerのスタイル設定
 header{
+    background-color: $bgColorWhite;
     padding: 0 3%;
     width: 100vw;
     height: 100px;
