キャラクターページ

--- a/miraire/css/module/_header.scss
+++ b/miraire/css/module/_header.scss
@@ -23,7 +23,7 @@ header{
     top: 0;
     padding: 0 3%;
     width: 100vw;
-    height: 100px;
+    height: $headerHeight;
     display: flex;
     justify-content: space-between;
     align-items: center;
