--- a/miraire/css/module/_variable.scss
+++ b/miraire/css/module/_variable.scss
@@ -15,12 +15,6 @@ $tableBgColor:#ffffff;
 $tableBorderColor:#333333;
 
 
-
-// font
-// font-family: フォント名;
-
-// typography
-// body{
-//   color: #000;
-//   font-family: フォント名;
-// }
+// ヘッダー・フッター
+$headerHeight: 100px;
+$footerHeight: 100px;
