--- a/miraire/css/module/_footer.scss
+++ b/miraire/css/module/_footer.scss
@@ -6,7 +6,7 @@ footer{
     bottom: 0;
     padding: 0 3%;
     width: 100vw;
-    height: 100px;
+    height: $footerHeight;
     display: flex;
     align-items: center;
     img.logo{
