--- a/miraire/css/page/character/character.scss
+++ b/miraire/css/page/character/character.scss
@@ -1,2 +1,71 @@
-@use "_variable.scss" as *;
+@use "../../module/variable" as *;
 // ページ単体に適用するスタイル
+
+// Swiper
+// Swiper本体
+.swiper{
+    position: relative;
+    z-index: 0; // ヘッダー・フッターより後ろに配置
+    width: 100%;
+    height: calc(100vh - $headerHeight - $footerHeight); // ヘッダーとフッターの間の高さ
+}
+
+.swiper-slide{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    .slide_item{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+        img{
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
+            height: auto;
+            object-fit: contain; // 画像のアスペクト比を保持しながら表示
+        }
+    }
+}
+
+// navigation buttons
+// デフォルトの矢印を削除
+.swiper-button-prev::after, .swiper-rtl .swiper-button-next::after {
+    content: ''; 
+}
+.swiper-button-next::after, .swiper-rtl .swiper-button-prev::after {
+    content: ''; 
+}
+.btn_wrapper{
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 5; // スライドの上に表示されるように
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+.swiper-button-prev,.swiper-button-next{
+    position: relative;
+    box-sizing: border-box;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: $White;
+    color: $Black;
+    border: 1px solid $Black;
+    /* :hover */
+    opacity: 0.7;
+    transition: 0.3s;
+}
+.swiper-button-prev:hover,.swiper-button-next:hover{
+    opacity: 1;
+}
