--- a/miraire/css/module/_header.scss
+++ b/miraire/css/module/_header.scss
@@ -43,9 +43,7 @@ header{
     }
     img.vote{
         width: 120px;
-        position: absolute;
-        top: 0.5rem;
-        right: 3%;
+        margin-top: 2rem;
     }
 }
 // *{
