--- a/miraire/css/module/_hamburger.scss
+++ b/miraire/css/module/_hamburger.scss
@@ -1,95 +1,95 @@
 @use "_variable.scss" as *;
 /* ヘッダーのナビ部分 */
 
-.header__nav {
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    transform: translateX(100%);
-    background-color: #fff;
-    transition: ease .4s;
-  }
+// .header__nav {
+//     position: absolute;
+//     right: 0;
+//     left: 0;
+//     top: 0;
+//     width: 100%;
+//     height: 100vh;
+//     transform: translateX(100%);
+//     background-color: #fff;
+//     transition: ease .4s;
+//   }
   
-  .nav-items {
-    padding-top: 250px;
-    padding-bottom: 200px;
-  }
+//   .nav-items {
+//     padding-top: 250px;
+//     padding-bottom: 200px;
+//   }
   
-  /* ナビのリンク */
-  .nav-items__item a {
-    color: black;
-    width: 100%;
-    display: block;
-    text-align: center;
-    // font-size: 20px;
-    margin-bottom: 24px;
-  }
+//   /* ナビのリンク */
+//   .nav-items__item a {
+//     color: black;
+//     width: 100%;
+//     display: block;
+//     text-align: center;
+//     // font-size: 20px;
+//     margin-bottom: 24px;
+//   }
   
-  .nav-items__item:last-child a {
-    margin-bottom: 0;
-  }
+//   .nav-items__item:last-child a {
+//     margin-bottom: 0;
+//   }
   
-  /* ハンバーガーメニュー */  
-  .header__hamburger {
-    position: absolute;
-    top:25px;
-    right: 25px;
-    width: 44px;
-    height: 44px;
-    border-radius: 22px;
-    background-color: #000;
+//   /* ハンバーガーメニュー */  
+//   .header__hamburger {
+//     position: absolute;
+//     top:25px;
+//     right: 25px;
+//     width: 44px;
+//     height: 44px;
+//     border-radius: 22px;
+//     background-color: #000;
   
-  }
+//   }
   
-  .hamburger {
-    // background-color: transparent;
-    // border-color: transparent;
-    z-index: 9999;
-  }
+//   .hamburger {
+//     // background-color: transparent;
+//     // border-color: transparent;
+//     z-index: 9999;
+//   }
   
-  /* ハンバーガーメニューの線 */
-  .hamburger span {
-    width: 80%;
-    margin: 0 auto;
-    height: 1px;
-    background-color: #ffffff;
-    position: relative;
-    transition: ease .4s;
-    display: block;
-  }
+//   /* ハンバーガーメニューの線 */
+//   .hamburger span {
+//     width: 80%;
+//     margin: 0 auto;
+//     height: 1px;
+//     background-color: #ffffff;
+//     position: relative;
+//     transition: ease .4s;
+//     display: block;
+//   }
   
-  .hamburger span:nth-child(1) {
-    top: 0;
-  }
+//   .hamburger span:nth-child(1) {
+//     top: 0;
+//   }
   
-  .hamburger span:nth-child(2) {
-    margin: 7px auto;
-  }
+//   .hamburger span:nth-child(2) {
+//     margin: 7px auto;
+//   }
   
-  .hamburger span:nth-child(3) {
-    top: 0;
-  }
+//   .hamburger span:nth-child(3) {
+//     top: 0;
+//   }
   
   
-  /* ハンバーガーメニュークリック後のスタイル */
-  .header__nav.active {
-    transform: translateX(0);
-  }
+//   /* ハンバーガーメニュークリック後のスタイル */
+//   .header__nav.active {
+//     transform: translateX(0);
+//   }
   
-  .hamburger.active span:nth-child(1) {
-    top: 7px;
-    transform: rotate(45deg);
-  }
+//   .hamburger.active span:nth-child(1) {
+//     top: 7px;
+//     transform: rotate(45deg);
+//   }
   
-  .hamburger.active span:nth-child(2) {
-    opacity: 0;
+//   .hamburger.active span:nth-child(2) {
+//     opacity: 0;
   
-  }
+//   }
   
-  .hamburger.active span:nth-child(3) {
-    top: -9px;
-    transform: rotate(-45deg);
-  }
+//   .hamburger.active span:nth-child(3) {
+//     top: -9px;
+//     transform: rotate(-45deg);
+//   }
