--- a/miraire/css/page/character/character.scss
+++ b/miraire/css/page/character/character.scss
@@ -1,3 +1,4 @@
+@charset "utf-8";
 @use "../../module/variable" as *;
 @use "../../module/animation" as *;
 // ページ単体に適用するスタイル
@@ -44,6 +45,8 @@ body,
 .slide_item{
     width: 100%;
     height: 100%;
+}
+.slide_item{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
