--- a/infographic/css/infographic.scss
+++ b/infographic/css/infographic.scss
@@ -1,7 +1,60 @@
 @charset "utf-8";
 
+@use "./variable" as *;
 // variable
-
+h1{
+    line-height: 1;
+    font-weight: bold;
+    font-size: 1.1rem;
+    color: $Black;
+}
+div.ranking-item{
+    p.number{
+        font-size: 5rem;
+        font-weight: bold;
+        font-style: italic;
+        line-height: 1;
+        color: $Black;
+    }
+    div.pledge-details{
+        p.pledge{
+            font-weight: bold;
+            font-size: 1.2rem;
+            color: $Black;
+        }
+        div{
+            p.name{
+                font-size: 1.7rem;
+                font-weight: bold;
+                color: $Black;
+            }
+            p.age{
+                font-weight: bold;
+                color: $Black;
+            }
+        }
+    }
+}
+div.winning-border{
+    font-size: 0.8rem;
+    color: $White;
+    font-weight: bold;
+}
+div.sub-content{
+    p.voting-status{
+        color: $White;
+        font-weight: bold;
+    }
+    div.vote-count{
+        div.content{
+            p.count-num{
+                font-size: 2.3rem;
+                font-weight: bold;
+                color: $White;
+            }
+        }
+    }
+}
 
 
 
@@ -11,3 +64,111 @@
 
 
 // layout
+html{
+    width: 100%;
+    height: 100%;
+    overflow-x: clip;
+}
+body{
+    width: 100%;
+    height: 100%;
+    padding: 0 2%;
+    overflow-x: clip;
+}
+h1{
+    margin: 1em 0;
+}
+div.ranking{
+    width: 90vw;
+    margin: 0 auto 2vh auto;
+    div.ranking-item{
+        border: 2px solid gray;
+        border-radius: 15px;
+        width: 90%;
+        height: 10vh;
+        display: flex;
+        align-items: center;
+        margin: 0 auto 1% auto;
+        p.number{
+            width: 15%;
+        }
+        div.pledge-details{
+            width: fit-content;
+            margin-right: 1rem;
+            div{
+                display: flex;
+                align-items: end;
+                justify-content: space-between;
+            }
+        }
+        div.gauge{
+            width: 55%;
+            background-color: rgb(216, 216, 216);
+            height: 50%;
+            width: 60%;
+            border-radius: 10px;
+            div.now-gauge{
+                width: 40px;
+                height: 100%;
+                background-color: aquamarine;
+                border-radius: 10px;
+            }
+        }
+    }
+    div.winning-border{
+        width: 100%;
+        height: 4vh;
+        display: flex;
+        align-items: center;
+        p{
+            padding: 0.3em 1.3em;
+            background-color: rgb(255, 187, 0);
+            width: 5%;
+            border-radius: 7px;
+        }
+        div{
+            height: 20%;
+            width: 100%;
+            background-color: rgb(255, 187, 0);
+        }
+    }
+}
+div.sub-content{
+    margin-left: auto;
+    margin-right: auto;
+    width: 81vw;
+    height: 25vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    div.animation{
+        width: 38%;
+        height: 100%;
+        border-radius: 20px;
+        background-color: rgb(197, 197, 197);
+    }
+    p.voting-status{
+        padding: 1rem;
+        background-color: $Black;
+        border-radius: 50%;
+        margin-left: 2em;
+    }
+    div.vote-count{
+        display: flex;
+        gap: 0.5rem;
+        width: 50%;
+        height: 100%;
+        div.content{
+            position: relative;
+            width: 20%;
+            height: 100%;
+            background-color: rgb(59, 184, 184);
+            border-radius: 25px;
+            p{
+                position: absolute;
+                left: 0;
+                bottom: 5%;
+            }
+        }
+    }
+}
