--- a/infographic/css/infographic.scss
+++ b/infographic/css/infographic.scss
@@ -107,6 +107,7 @@ div.ranking{
             height: 50%;
             width: 60%;
             border-radius: 10px;
+            // =========================↓ここがゲージの設定==========================
             div.now-gauge{
                 width: 40px;
                 height: 100%;
