--- a/miraire/css/module/_footer.scss
+++ b/miraire/css/module/_footer.scss
@@ -17,11 +17,11 @@ footer{
         justify-content: center;
         align-items: center;
         gap: 1.5em;
+        margin-left: 3rem;
     }
     img.sns{
-        width: 120px;
-        margin-top: 2rem;
-        z-index: 1;
+        width: 140px;
+
     }
 }
 // *{
