--- a/miraire/css/page/index/index.scss
+++ b/miraire/css/page/index/index.scss
@@ -88,10 +88,13 @@ section.explanation{
         margin-bottom: 4rem;
         div.item{
             width: 30%;
-            
+            // max-width: 300px;
             img{
+                // height: 250px;
+                // width: 100%;
                 width: 100%;
-                height: 250px;
+                aspect-ratio: 3/2;
+                // max-width: 350px;
                 border-radius: 25px;
                 background-color: rgb(159, 159, 159);
                 margin-bottom: 2rem;
