--- a/miraire/css/page/index/index.scss
+++ b/miraire/css/page/index/index.scss
@@ -56,6 +56,7 @@ section.about{
     background-repeat: none;
     background-size: cover;
     background-position: center;
+    height: 100vh;
     div.text-area{
         width: fit-content;
         max-width: 300px;
@@ -81,6 +82,10 @@ section.about{
 
 section.explanation{
     padding: 6rem 0;
+    background-image: url(../../../images/bg.png);
+    background-repeat: none;
+    background-size: cover;
+    background-position: center;
     div.contents{
         @media(769px <= width){
             display: flex;
