--- a/miraire/css/page/vote/vote.scss
+++ b/miraire/css/page/vote/vote.scss
@@ -268,8 +268,59 @@ html{
     text-align: center;
 }
 
+.vote-animation-container {
+    position: relative;
+    width: 100%;
+    min-height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .vote-complete-image {
     width: 100%;
     height: auto;
     display: block;
+    max-width: 600px;
+}
+
+.vote-before-image {
+    position: relative;
+    z-index: 1;
+}
+
+.vote-after-image {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+    object-fit: contain;
+    z-index: 2;
+    clip-path: inset(0 100% 0 0);
+    -webkit-clip-path: inset(0 100% 0 0);
+}
+
+.vote-parts-image {
+    position: absolute;
+    top: -20%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 3;
+    width: 30% !important;
+    max-width: 30% !important;
+    max-height: 30% !important;
+    height: auto !important;
+    opacity: 0;
+    transition: top 1.5s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.8s ease-in-out;
+    pointer-events: none;
+    object-fit: contain;
+}
+
+.vote-parts-image.parts-falling {
+    top: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1;
 }
