--- a/infographic/css/infographic.scss
+++ b/infographic/css/infographic.scss
@@ -2,174 +2,100 @@
 
 @use "./variable" as *;
 // variable
-h1{
-    line-height: 1;
-    font-weight: bold;
-    font-size: 1.1rem;
-    color: $Black;
-}
-div.ranking-item{
-    p.number{
-        font-size: 5rem;
-        font-weight: bold;
-        font-style: italic;
-        line-height: 1;
-        color: $Black;
-    }
-    div.pledge-details{
-        p.pledge{
-            font-weight: bold;
-            font-size: 1.2rem;
-            color: $Black;
-        }
-        div{
-            p.name{
-                font-size: 1.7rem;
-                font-weight: bold;
-                color: $Black;
-            }
-            p.age{
-                font-weight: bold;
-                color: $Black;
-            }
-        }
-    }
-}
-div.winning-border{
-    font-size: 0.8rem;
-    color: $White;
-    font-weight: bold;
-}
-div.sub-content{
-    p.voting-status{
-        color: $White;
-        font-weight: bold;
-    }
-    div.vote-count{
-        div.content{
-            p.count-num{
-                font-size: 2.3rem;
-                font-weight: bold;
-                color: $White;
-            }
-        }
-    }
-}
-
-
 
 // typography
-
-
-
+div.pledge-item{
+    p.rank{
+        font-size: 3rem;
+        font-weight: bold;
+        font-style: italic;
+    }
+    p.pledge-name{
+        font-weight: bold;
+        color: $White;
+    }
+    div.text{
+        p.catch-copy{
+            font-weight: bold;
+            color: $Black;
+        }
+        p.name{
+            font-size: 2rem;
+            font-weight: bold;
+            color: $Black;
+            span{
+                font-size: 1.4rem;
+            }
+        }
+    }
+}
 
 // layout
-html{
-    width: 100%;
-    height: 100%;
-    overflow-x: clip;
-}
 body{
-    width: 100%;
-    height: 100%;
-    padding: 0 2%;
-    overflow-x: clip;
-}
-h1{
-    margin: 1em 0;
+    background-image: url();
 }
 div.ranking{
-    width: 90vw;
-    margin: 0 auto 2vh auto;
-    div.ranking-item{
-        border: 2px solid gray;
-        border-radius: 15px;
-        width: 90%;
-        height: 10vh;
-        display: flex;
-        align-items: center;
-        margin: 0 auto 1% auto;
-        p.number{
-            width: 15%;
-        }
-        div.pledge-details{
-            width: fit-content;
-            margin-right: 1rem;
-            div{
-                display: flex;
-                align-items: end;
-                justify-content: space-between;
-            }
-        }
-        div.gauge{
-            width: 55%;
-            background-color: rgb(216, 216, 216);
-            height: 50%;
-            width: 60%;
-            border-radius: 10px;
-            // =========================↓ここがゲージの設定==========================
-            div.now-gauge{
-                width: 40px;
-                height: 100%;
-                background-color: aquamarine;
-                border-radius: 10px;
-            }
-        }
-    }
-    div.winning-border{
-        width: 100%;
-        height: 4vh;
-        display: flex;
-        align-items: center;
-        p{
-            padding: 0.3em 1.3em;
-            background-color: rgb(255, 187, 0);
-            width: 5%;
-            border-radius: 7px;
-        }
-        div{
-            height: 20%;
-            width: 100%;
-            background-color: rgb(255, 187, 0);
-        }
-    }
+    margin: 0 3% 4rem;
 }
-div.sub-content{
-    margin-left: auto;
-    margin-right: auto;
-    width: 81vw;
-    height: 25vh;
+div.ranking-item{
     display: flex;
-    justify-content: space-between;
+    width: 100%;
+    height: 13%;
+    border: 1px solid rgb(86, 86, 86);
+    border-radius: 30px;
+    box-shadow: 4px 4px;
+    margin-bottom: 1rem;
+    padding: 0 1rem;
+}
+
+div.pledge-item{
+    display: flex;
     align-items: center;
-    div.animation{
-        width: 38%;
+    width: 50%;
+    p.rank{
+        margin-right: 1rem;
+    }
+    p.pledge-name{
+        background-color: rgb(25, 25, 174);
+        border-radius: 25px;
+        width: 20%;
+        text-align: center;
+        padding: 0.3em 0;
+    }
+    img{
         height: 100%;
-        border-radius: 20px;
-        background-color: rgb(197, 197, 197);
     }
-    p.voting-status{
-        padding: 1rem;
-        background-color: $Black;
-        border-radius: 50%;
-        margin-left: 2em;
-    }
-    div.vote-count{
+}
+div.gauge{
+    margin: auto 0;
+    width: 50%;
+    height: 80%;
+    div.sector{
         display: flex;
-        gap: 0.5rem;
-        width: 50%;
+        align-items: center;
+        background-image: url(../images/sector.png);
+        background-repeat: no-repeat;
+        background-position: 0 center;
+        background-size: contain;
         height: 100%;
-        div.content{
-            position: relative;
-            width: 20%;
-            height: 100%;
-            background-color: rgb(59, 184, 184);
-            border-radius: 25px;
-            p{
-                position: absolute;
-                left: 0;
-                bottom: 5%;
-            }
+        width: 100%;
+        div.now-gauge{
+            width: 30%;//投票数に応じて変動
+            height: 50%;
+            background-color: aquamarine;
+            border-radius: 10px;
         }
     }
 }
+div.bottom-logo{
+    display: flex;
+    justify-content: center;
+    img{
+        width: 15%;
+    }
+}
+
+
+// *{
+//     border: 0.1px solid red;
+// }
